Zmiany w QMPlay2 build 14.11.30:
	- dodany "User-Agent" dla połączeń HTTP (ProstoPleer znowu działa),
	- poprawa kompilacji dla Windows x86-64,
	- drobne poprawy błędów,

Zmiany w QMPlay2 build 14.10.07:
	- przywrócone działanie napisów ASS z kontenera Matroska w FFMpeg 2.4.x,
	- obsługa zmiany metadanych przy użyciu FFMpeg 2.4.x,
	- możliwość pamiętania ustawień korektora wideo,
	- sortowanie dodawanych katalogów do playlisty,
	- poprawa działania YouTube,
	- dodana obsługa pleer.com,
	- poprawa działania OpenGL,
	- poprawki błędów,

Zmiany w QMPlay2 build 14.07.27:
	- ikony mogą być wczytywane z systemowego zestawu ikon (opcja domyślna, Linux, BSD), dodane zostały też nowe ikony,
	- obsługa dowolnego serwisu wideo poprzez program "youtube-dl" (w menu dodawania adresu),
	- obsługa filtrów redukcji szumów, ostrości i poziomów skalowania obrazu w VDPAU,
	- możliwość blokowania widgetów (usuwa pasek tytułu oraz blokuje pasek narzędzi),
	- możliwość wczytywania modułów z katalogu ustawień (~/.qmplay2/Modules),
	- możliwość ustawiania kolorów i tapety (podobnie jak w QMPlay1),
	- usprawnienia w odczycie/zapisie playlisty,
	- obsługa ReplayGain (domyślnie wyłączone),
	- zmiana sposobu zapisu pozycji okna,
	- usprawnione przełączanie strumieni,
	- obsługa MPRIS2 (tylko Linux/BSD),
	- poprawiona obsługa "youtube-dl",
	- obsługa obrazków w plikach OGG,
	- drobne poprawki w HttpReader,
	- poprawa działania VDPAU,
	- poprawa obsługi HTTPS,
	- inne drobne zmiany,
	- poprawki błędów,

Zmiany w QMPlay2 build 14.03.05:
	- poprawione działanie YouTube - obsługa poprzez program "youtube-dl" (wymagane podanie ścieżki w opcjach),
	- tytuł płyty AudioCD wyświetlany jako album,
	- poprawiony błąd z odświeżaniem OSD,
	- poprawione błędy w edycji tagów,

Zmiany w QMPlay2 build 14.02.17:
	- poprawiony problem z kompilacją z taglib1.8,

Zmiany w QMPlay2 build 14.02.16:
	- dodana obsługa bazy danych CDDB (freedb.org, freedb.musicbrainz.org),