@@ -1,3 +1,5 @@
+GrooveShark
+
 Open with QMPlay2 and Enqueue files - improve
 Slow seeking on some network streams
 
