@@ -28,11 +28,13 @@ BYTE autovibxm2it[8] =
 extern WORD XMPeriodTable[96+8];
 extern UINT XMLinearTable[768];
 
+#ifndef MODPLUG_NO_FILESAVE
 static inline UINT ConvertVolParam(UINT value)
 //--------------------------------------------
 {
 	return (value > 9)  ? 9 : value;
 }
+#endif
 
 
 BOOL CSoundFile::ITInstrToMPT(const void *p, INSTRUMENTHEADER *penv, UINT trkvers)
