@@ -3,7 +3,7 @@
 
 #include <QStringList>
 
-class libASS;
+class LibASS;
 
 class SubsDec
 {
@@ -11,7 +11,7 @@ public:
 	static SubsDec *create( const QString & );
 	static QStringList extensions();
 
-	virtual bool toASS( const QByteArray &, libASS *, double ) = 0;
+	virtual bool toASS( const QByteArray &, LibASS *, double ) = 0;
 
 	virtual ~SubsDec() {}
 };
